# PseudoPathy

./: .gitignore  Functions.py  Globals.py  Group.py  Library.py  Paths.py  README.md  __init__.py  pyproject.toml  setup.py
PseudoPathy/: Alignments.py  FileNameAlignment.py  Functions.py  Globals.py  Group.py  Groups.py  Libraries.py  Library.py  Lists.py  PathProperty.py  PathShortHands.py  PathUtilities.py  Paths.py  ShortHands.py  Utilities.py  __init__.py  __main__.py  _globals.py  test.py
tests/: test_package.py
